portfolio_website/public_html/css/desktop.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Aug 7, 2018, 8:44:51 PM
    Author     : Simone
*/
html, body{
    margin: 0px;
    padding: 0px;
}

body{
    font-family: "Arial", Helvetica, sans-serif;
    background-image: url("../images/linen_texture.png");
    margin-top: 100px;
}

h1 {
    font-size: 2.5em;
    font-weight: bold;
    text-align: center;
}

h2{
    font-size: 1.875em;
    font-weight: bold;
}

h3{
    font-size: 1.25em;
}
a {
    color: inherit;
}

a:link {
    colour: #45E8B0;
    text-decoration: none;
    font-size: 1.25em;
    font-weight: bold;
}

a:hover {
    color: #6126C9;
}

.textDark{
    color: #45E8B0;
}

.textLight {
    color: #6126C9;
}

.textNormal{
    color: #363838;
}

.backgroundDark {
    background-color: #363838;
}

.backgroundLight{
    background-color: #C3C1BF;
}

.backgroundTexture{
    /*TODO*/
}

#mainTitle{
    width: 50%; 
    float: left;
    box-sizing: border-box;
}

#nav {
    width: 50%;
    float: left;
    box-sizing: border-box;
    padding: 20px;
}

header {
    height: 100px;
    background-image: url("../images/linen_texture.png");
    position: fixed;
    top: 0;
    width: 100%;
}


.skillBox{
    height: 400px;
    width: 150px;
    padding: 20px;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

li {
    float: left;
}

li a {
    display: block;
    color: #363838;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-family: "Arial", Helvetica, sans-serif;
    font-size: 1.875em;
    font-weight: bold;
}

/*li a.active{
    color: #6126C9;
}*/

li a:hover {
    color: #6126C9;
}

.textCenter {
    text-align: center;
}

#aboutP {
    width: 50%;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
    box-sizing: border-box;
    float: left;
}

.containerCenter{
    margin: auto;
    width: 460px;
    border-style:  solid;
    border-width: 1px;
    border-color: #363838;
}

#aboutPicture {
    padding: 20px;
    text-align: center;
    width: 50%;
    box-sizing: border-box;
    float: left;
}


.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

.projectContainer {
    height: 450px;
    width: 400px;
    margin: 30px;
}

.descriptionContainer {
    padding: 20px;
}

.titlePadding {
    padding: 20px;
    margin: 20px;
}

.smallLineHeight {
    line-height: 30%;
}

.backgroundImage {
    background-image: url("images/linen_texture.png");
}

.containerSkills {
    box-sizing: border-box;
    float: left;
    width: 33.33%;
    padding: 10px;
}

.containerContact {
    width: 50%;
    box-sizing: border-box;
    float: left;
}

.moveRight {
    float: right;
}

.textContact {
    margin-top: 60px;
}

.projectMove {
    box-sizing: border-box;
    float: left;
    width: 50%;
}

.extraPadding {
    padding: 10px;
}

#aboutPWidth {
    width: 300px;
}

.positionFixed {
    position: fixed;
}

#skillsCenter {
    margin: auto;
    width: 185px;
}

.extraMargin {
    margin: 10px;
}

.roundCorners {
    border-radius: 50%;
}

.backgroundWhite {
    background-color: #F5F5F5;
}

.iconWidth {
    width: 110px;
    height: 110px;
}

.iconText {
    padding-left: 33px;
    padding-top: 23px;
}

.iconTextE {
    padding-left: 26px;
    padding-top: 23px;
}

/* Grow */
.hvr-grow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
}
.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

